sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:6: error: illegal start of simple pattern
  var premier _indice=len
                     ^DutchFlagAlgo:7: error: '=' expected but ';' found.
  while (!estTrie()){
^