sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var len=getTaille()
  var i=1
  var dernier_indice=1
  var premier _indice=len
  while (!estTrie()){
    	if (getCouleur(i)==BLEU){
        echange(dernier_indice+1,i)
        dernier_indice+=1
        }
      else if (getCouleur(i)==ROUGE){
      	echange(premier_indice-1,i)
        premier_indice-=1
        }
    i+=1
  	}
}